--- a/app/views/blog_posts/_admin_links.html.erb
+++ b/app/views/blog_posts/_admin_links.html.erb
@@ -1,4 +1,4 @@
-<% if current_user && current_user.admin? %>
+<% if permitted_to? :manage, :blog_posts%>
 	<div class="blogAdminLinks">
 		<ul class="blogList">
 			<li class="blogListFirst"><%= link_to 'New Blog Post', new_blog_post_path %></li>
