--- a/app/views/blog_posts/_blog_post.html.erb
+++ b/app/views/blog_posts/_blog_post.html.erb
@@ -20,7 +20,7 @@
 	</p>
 
 	<div class="blogPostBody">
-		<%= blog_post.parsed_body %>
+		<%= blog_post.body %>
 	</div>
 
 	<hr class="blogPostBreak" />
@@ -39,7 +39,7 @@
 			<% end %>
 		
 		
-			<% if current_user && current_user.admin? %>
+			<% if permitted_to? :manage, :blog_posts %>
 				<li><%= link_to('Edit Post', edit_blog_post_path(blog_post))%></li>
 				<li><%= link_to('Delete', blog_post_path(blog_post), :method => :delete, :confirm => "Are you sure you want to destroy the post: #{blog_post.title}") %></li>
 			<% end %>
