--- a/app/views/blog_posts/_comment.html.erb
+++ b/app/views/blog_posts/_comment.html.erb
@@ -11,7 +11,7 @@
 	
 	<%= h(comment.parsed_body) %>
 	
-	<% if current_user && current_user.admin? %>
+	<% if permitted_to? :manage, :blog_posts %>
 		<p><%= button_to('Delete', blog_post_blog_comment_path(@blog_post, comment), :method => :delete, :confirm => 'Are you sure you want to delete this comment?') %></p>
 	<% end %>
 	<br style="clear: both;" />
