--- a/app/views/blog_posts/_form.html.erb
+++ b/app/views/blog_posts/_form.html.erb
@@ -1,28 +1,7 @@
-<script>
-function addImage() {
-	var newImageDiv = document.getElementById('newImage');
-	var blogImagesDiv = document.getElementById('blogImages');
-	
-	var add_html = (newImageDiv.innerHTML+'').replace(/replace_with_rand/g, Math.round(Math.random() * 1000000000));
-	
-	blogImagesDiv.innerHTML += add_html;
-	
-}
+<% content_for :head do -%>
 
-function removeImage(image_id) {
-	document.getElementById('image_' + image_id).value = '1';
-	document.getElementById('imageDiv' + image_id).style.display = 'none';
-}
-
-function insertImage(image_id) {
-	var blogBody = document.getElementById('blog_post_body');
-	if (typeof(BLOG_EDITOR) !== 'undefined') {
-		BLOG_EDITOR.setContent(BLOG_EDITOR.getContent() + '\n<img src="{blog_image:' + image_id + ':large}" />\n');
-	} else {
-		blogBody.value += '\n![]({blog_image:' + image_id + ':large})\n';
-	}
-}
-</script>
+	<%= javascript_include_tag :ckeditor %>
+<% end -%>
 
 <% form_for(@blog_post, :html => { :multipart => true }) do |f| %>
 	<% if BlogKit.instance.settings['use_markdown'] == false && BlogKit.instance.settings['html_editor'] == true %>
@@ -53,7 +32,7 @@ function insertImage(image_id) {
 			</p>
 			<p>
 				<%= f.label :body %><br />
-				<%= f.text_area :body %>
+		    <%= ckeditor_textarea("blog_post", "body", :width => '100%', :height => '600px') %>
 			</p>
 			<p>
 				<%= f.label :tags, 'Tags (comma seperated)' %><br />
@@ -68,9 +47,11 @@ function insertImage(image_id) {
 				<%= f.submit 'Save' %> or <%= link_to 'Back', blog_posts_path %>
 			</p>
 		</div>
-		<div class="blogEditRightPanel">
-			rightPanel
-		</div>
-		<br style="clear: both;" />
+		<% content_for :left do -%>
+			<div class="blogEditRightPanel">
+				rightPanel
+			</div>
+		<% end -%>
+		
 	</div>
 <% end %>
