--- a/app/views/blog_posts/_admin_links.html.erb
+++ b/app/views/blog_posts/_admin_links.html.erb
@@ -1,9 +1,9 @@
 <% if permitted_to? :manage, :blog_posts%>
 	<div class="blogAdminLinks">
 		<ul class="blogList">
-			<li class="blogListFirst"><%= link_to 'New Blog Post', new_blog_post_path %></li>
-			<li><%= link_to 'Edit Drafts', drafts_blog_posts_path %></li>
-			<li><%= link_to 'All Posts', blog_posts_path %></li>
+			<li class="blogListFirst"><%= link_to 'New Blog Post', new_user_blog_post_path(@blog_post.user) %></li>
+			<li><%= link_to 'Edit Drafts', drafts_user_blog_posts_path(@blog_post.user) %></li>
+			<li><%= link_to 'All Posts', user_blog_posts_path(@blog_post.user) %></li>
 		</ul>
 	</div>
 <% end %>
